--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -10,43 +10,52 @@
 .logo {
     width: 34px;
     aspect-ratio: 1/1;
+    margin-bottom: 30px;
 }
 
 .nav {
-    width: 200px;
+    width: 80%;
     margin-top: 40px;
-    margin-bottom: 20px;
     background-color: var(--dark-alt);
-    border-radius: 32px;
+    border-radius: 22px;
     list-style: none;
     
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 30px;
-    padding: 20px 15px;
+    padding: 20px 0;
+    padding-left: 50px;
 }
 
-.nav button {
-    background: red;
-    position: relative;
+.button {
+    min-width: fit-content;
+    background: none;
     border: none;
     outline: none;
+    padding: 0;
     color: var(--text-gray);
-    width: 120px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    gap: 20px;
 }
 
-.nav button span {
-    margin-left: 35px;
+.icon {
+    background-color: none;
+    width: 24px;
+    height: 24px;
+}
+
+.span {
     font-weight: var(--font-bold);
-    background-color: aqua;
-    display: inline;
+    margin-top: 2px;
 }
 
-.nav button svg {
-    position: absolute;
+.button:hover .icon, .button:hover .span {
+    color: var(--secondary);
+    cursor: pointer;
+}
+.button:focus .icon, .button:focus .span {
+    color: var(--primary);
+    /* box-shadow: 0px 0px 11px rgba(250, 205, 102, 0.25); */
 }
